--- a/src/style/app.css
+++ b/src/style/app.css
@@ -1,7 +1,7 @@
 /* styles in src/style directory are applied to the whole page */
 body {
-  background: #0147A7;
-  color: #fff;
+  /*background: #0147A7;*/
+  /*color: #fff;*/
 }
 
 a {
@@ -19,4 +19,10 @@ main {
 footer {
   text-align: center;
   font-size: 0.8em;
+}
+
+
+#map {
+    height:600px;
+    width:1000px;
 }
